feat: 终端执行工具和代码重构